Bug 798829: Force MediaManager to be created from MainThread r=anant